Changed images and fixed cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ img.h_img {
 }
 
 .iframe-holder img {
-  width: 85vmin;
+  width: 72vmin;
   height: auto;
   
   position: absolute;
